TL-656 (#35)
* TL-656. Profile field and profile storage management

* TL-656. Settings description docs. Swagger updated
